Replacing 'Freerunner' with 'FreeRunner'

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -4,7 +4,7 @@
 
 ==Introduction== 
 
-=== Q: What is Openmoko? What is the Neo 1973? What is the Neo Freerunner? ===
+=== Q: What is Openmoko? What is the Neo 1973? What is the Neo FreeRunner? ===
 A: Openmoko is a software platform and the world's first completely open mobile phone software stack.  It is based on Linux and  allows users and enthusiasts great freedom to customise their phone.
 * The [[Neo 1973]] is the first fully supported Openmoko phone. 
 * The FIC [[Neo FreeRunner]] is the second Openmoko phone and is now available for sale!
@@ -61,9 +61,9 @@ Ideally they also:
 * Can spot bugs and submit patches.
 * Love to cooperate with a community improving the software.
 
-=== Q: What can I do with the Neo Freerunner? ===
+=== Q: What can I do with the Neo FreeRunner? ===
 
-A: The Neo Freerunner is the first phase 2 (mass release) phone from the Openmoko project and is designed for everyday use by end users and continued software development and improvements by the Openmoko team and the Openmoko community.
+A: The Neo FreeRunner is the first phase 2 (mass release) phone from the Openmoko project and is designed for everyday use by end users and continued software development and improvements by the Openmoko team and the Openmoko community.
 
 A: The question is almost what can you NOT do with this phone - eventually there will be a huge range of free software applications allowing both end users and developers to get much more out of this phone than a standard "locked" mobile phone using features like the integrated GPS, bluetooth, wifi and accelerometers.
 
@@ -104,8 +104,8 @@ For FreeRunner
 
 === Q: What else do I need to know? ===
 
-* Both Neo 1973 and Neo Freerunner are tri-band GSM phones.   
-* The Neo Freerunner is as an 850/1800/1900MHz version for North America and an 900/1800/1900MHz version for the rest of the world.      
+* Both Neo 1973 and Neo FreeRunner are tri-band GSM phones.   
+* The Neo FreeRunner is as an 850/1800/1900MHz version for North America and an 900/1800/1900MHz version for the rest of the world.      
 * The Neo 1973 is only available as an 900/1800/1900Mhz version only and may not work well in some rural parts of North America.
 
 === Q: What are the benefits of an "open" phone over a "closed" phone ===
@@ -127,7 +127,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 :Type <tt>:q</tt> or <tt>:q!</tt> to quit, or <tt>ZZ</tt> to save.
 
-:With default image you can't escape edit mode, due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the Freerunner from your computer and use the keyboard on that computer to edit files in vi. Alternative on-screen keyboards feature an escape key.
+:With default image you can't escape edit mode, due to the missing Esc key. You need to [[Switching_Keyboards|install a new on-screen keyboard]], and in order to do this you'll need to [[Getting_Started_with_your_Neo_FreeRunner#Set_up_USB-based_networking_and_update|set up USB networking]] first. You can then SSH into the FreeRunner from your computer and use the keyboard on that computer to edit files in vi. Alternative on-screen keyboards feature an escape key.
 
 
 ==== How do I enter the /, | or > characters? ====
@@ -216,7 +216,7 @@ A: See [[Toolchain]].
 For a lot of testing and development work, you don't actually need emulation as you can run Openmoko on a normal PC too. The emulators also aren't 100% accurate. That being said, there are several emulation options as described in the following.
 
 ====QEMU====
-QEMU can now emulate the Neo 1973 and the Neo Freerunner. The [[MokoMakefile]] has support for automatically building, flashing, and running [[Openmoko under QEMU|the Neo emulator]].
+QEMU can now emulate the Neo 1973 and the Neo FreeRunner. The [[MokoMakefile]] has support for automatically building, flashing, and running [[Openmoko under QEMU|the Neo emulator]].
 
 *Ubuntu users can follow the instructions in [[Automatic_emulation_in_Ubuntu]]
 
@@ -314,7 +314,7 @@ A: No, see [[:Category:Neo1973 Hardware | Neo1973]] for details on what it does 
 
 === Q: Does it have Wifi? ===
 
-A:The current model [[Freerunner]] does have wifi. The older model, [[Neo1973]], does not have WiFi. There was no suitable Wifi device available when it was designed. See also [[FAQ#USB]].
+A:The current model [[FreeRunner]] does have wifi. The older model, [[Neo1973]], does not have WiFi. There was no suitable Wifi device available when it was designed. See also [[FAQ#USB]].
 
 === Q: Does it have bluetooth? ===
 
@@ -361,7 +361,7 @@ The only limitation on current hardware seems to be no usb 2.0 support, which me
 
 A: The processor has USB 1.1 built in. One with USB2 built in would have been more expensive, and might not be open.
 
-A: The Freerunner has the same processor as the Neo1973.
+A: The FreeRunner has the same processor as the Neo1973.
 
 ==== Q: Can the Neo charge and use devices on a USB hub at the same time? ====
 
@@ -423,7 +423,7 @@ A: Tri-band GSM (commonly known as "European tri-band", 900/1800/1900 MHz), GPRS
 
 A: Yes - see [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_access_point this howto for how to configure a linux computer to act as such a router] and [[Bluetooth Support]].
 
-=== Q: What providers provide the GSM required for Neo1973, or Freerunner? ===
+=== Q: What providers provide the GSM required for Neo1973, or FreeRunner? ===
 
 A: See [[Neo1973 compatible cellphone providers]]
 
