Replacing 'Freerunner' with 'FreeRunner'

--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -28,7 +28,7 @@ You will download that program on your desktop computer. It will allow you to co
 
 '''MacOS X:''' [[MacOS_X#Graphical_Flashing_with_Openmoko_Flasher]]
 
-'''Linux:''' http://buildhost.openmoko.org/releases/Freerunner/dfu-util
+'''Linux:''' http://buildhost.openmoko.org/releases/FreeRunner/dfu-util
 
 Make sure it is executable by setting the permissions with this command: chmod a+x dfu-util
 
@@ -51,18 +51,18 @@ Please read [[Distributions]] for choosing the distribution which fits your need
 
 # Read the other sections of this page first, because you will have 30 seconds to enter the flashing commands, come back here when ready.
 # Do not connect the USB cable from the PC to your Neo FreeRunner yet (disconnect it).
-# Boot your Neo Freerunner into the NOR uBoot menu for flashing.
+# Boot your Neo FreeRunner into the NOR uBoot menu for flashing.
 ## Press and hold AUX button
 ## Press the Power button until the boot menu comes up
 ## This menu is labelled '''*** BOOT MENU (NOR) ***'''
 ## See also [[Booting the Neo FreeRunner]]
-# Stay in NOR uBoot menu, do not to select or enter any item in menu. Now you will be able to flash, make backups of your Freerunner or query the Freerunner with dfu-util.
+# Stay in NOR uBoot menu, do not to select or enter any item in menu. Now you will be able to flash, make backups of your FreeRunner or query the FreeRunner with dfu-util.
 # The FreeRunner only stays at the NOR boot prompt for about 30 seconds and then shuts off unless you do something.
 # Connect your Neo to the GNU/Linux or Windows host via a USB cable. 
 # Now you can enter the dfu-util commands on your PC as described below.
 # If the Neo FreeRunner turns off before you press start flashing ('''screen goes black'''), go back to step 2. If you start flashing in time, the phone will not turn off meanwhile.
 
-<!-- The following, upto dfu-util -l is taken from the thread "Re: Freerunner (GTK2007.2) has suddenly become unbootable" on the Support list. -->
+<!-- The following, upto dfu-util -l is taken from the thread "Re: FreeRunner (GTK2007.2) has suddenly become unbootable" on the Support list. -->
 
 Note that the dfu-util connection does '''not''' use Ethernet over USB - that is, you should not attempt to set up a usb0 network interface on your GNU/Linux host desktop (on Windows, you need a DFU class driver, or you can use the LibUSB-Win32 driver described on the [[Dfu-util-windows]] page). The dfu-util utility sets up its own connection to the FreeRunner. In fact, you will not be able to make an Ethernet-over-USB connection to the FreeRunner when it is at the uBoot menu; this type of connection is only available when the FreeRunner has booted fully.
 
