Replacing 'Freerunner' with 'FreeRunner'

--- a/Forcing_fast_charge_mode.mw
+++ b/Forcing_fast_charge_mode.mw
@@ -20,7 +20,7 @@ There are several ways of forcing fast charge mode:
 
 [[User:Wurp|I]] have also written a python script to monitor for slow charge and automatically pop up a gui asking if you want to switch to fast charge.  [[CheckFastCharge-script|Here]] are instructions on installing the script.
 
-=== Neo Freerunner ===
+=== Neo FreeRunner ===
 
 The behaviour is pretty much the same as described above for the Noe 1973. There's also a 1000 mA mode for the Openmoko-provided wall charger.
 
@@ -37,7 +37,7 @@ http://hdr.meetr.de/neo/openmoko/battery/battery_0.20080721_armv4t.ipk
 
 [[User:Nytowl]] wrote a python script to control the fast charge states : ''Power Center''.  
 
-Power Center allows you to force a Neo Freerunner into Fast charge modes. It can damage your hardware so be careful with what its plugged into. I'm not responsible if you toast the USB port on your brand new laptop.
+Power Center allows you to force a Neo FreeRunner into Fast charge modes. It can damage your hardware so be careful with what its plugged into. I'm not responsible if you toast the USB port on your brand new laptop.
 
 copy [http://www.handheldshell.com/software/power_center Power Center] into /usr/bin and "chmod u+x /usr/bin/power_center"
 
