--- a/FreeRunner%2FButtons_and_LEDs.mw
+++ b/FreeRunner%2FButtons_and_LEDs.mw
@@ -93,7 +93,7 @@ LEDs are very useful in broadcasting valuable basic status information to the us
 
 
 =Python Script For Blinking Leds By Beats=
-Reads beats from a file and blinks Freerunners leds.
+Reads beats from a file and blinks FreeRunners leds.
  
 File format is human readable text, consisting of a simple sequence of integer quartet (4 numbers).  The first number representing status of blue power-led, second means status of orange power-led and third means status of red aux-led. 0=OFF, 1=ON. (If blue=1 and orange=1 then power=lila. This has nothing to do with this python script or this file format.) The last number represents the duration in milliseconds to hold that situation of leds.  Any non digit characters in the file count as a separators between numbers, but are otherwise ignored.
 
