Replacing 'Freerunner' with 'FreeRunner'

--- a/FreeRunner:_Selected_Blogs_and_Articles.mw
+++ b/FreeRunner:_Selected_Blogs_and_Articles.mw
@@ -15,27 +15,27 @@ Newest on top.
 * Monochrome Mentality [http://monochromementality.com/index.php/blog/show/FSO-Milestone-II-Phot-Safari-and--rant.html FSO Milestone II Photo Safari and rant]
 
 === July 2008 ===
-* technocrat.net (Charles E. Hill) [http://technocrat.net/d/2008/7/27/46753 Openmoko Neo Freerunner - Part 1]
+* technocrat.net (Charles E. Hill) [http://technocrat.net/d/2008/7/27/46753 Openmoko Neo FreeRunner - Part 1]
 * Rabble.ca (Wayne MacPhail) [http://www.rabble.ca/news_full_story.shtml?x=73765 Introducing the anti-iPhone]
-* Canadia Blog [http://bieberphoto.com/canadia/index.php/2008/07/openmoko-neo-freerunner-review/ Neo Freerunner Review]
+* Canadia Blog [http://bieberphoto.com/canadia/index.php/2008/07/openmoko-neo-freerunner-review/ Neo FreeRunner Review]
 * Holden Karau [http://blog.holdenkarau.com/2008/07/unboxing-openmokofreerunner-including.html Unboxing the Openmoko/FreeRunner including the spares kit, debug board]
 * Dave Fayram [http://www.vimeo.com/1366042 Openmoko Train Wreck] (video review)
 * Dave Fayram [http://www.vimeo.com/1366923 More Openmoko Train Wrecking (Now with Qt!)] (video review)
 * Wired's Gadget Lab Podcast: [http://blog.wired.com/gadgets/2008/07/gadget-lab-po-1.html Summary] and [http://audio.sonibyte.com/audio/7394.mp3 mp3] (discussion starts at 5:50)
-* jThinks: [http://jthinks.com/index.php/freerunner-at-last/ Freerunner, at last]
+* jThinks: [http://jthinks.com/index.php/freerunner-at-last/ FreeRunner, at last]
 * Holden's Blog: [http://blog.holdenkarau.com/2008/07/unboxing-openmokofreerunner-including.html Unboxing the Openmoko/FreeRunner including the spares kit, debug board]
-* Wolfmans Howlings: [http://blog.wolfman.com/articles/2008/07/11/openmoko-freerunner-first-impressions Openmoko Freerunner first impressions]
+* Wolfmans Howlings: [http://blog.wolfman.com/articles/2008/07/11/openmoko-freerunner-first-impressions Openmoko FreeRunner first impressions]
 * Free Software Foundation (John Sullivan): [http://www.fsf.org/blogs/community/5-reasons-to-avoid-iphone-3g 5 reasons to avoid iPhone 3G]
 * Joseph Reeves: [http://blogs.thehumanjourney.net/finds/entry/20080710 FreeRunner retail unboxing]
 * Ars Technica: [http://arstechnica.com/reviews/os/open-moko-software.ars Ars Technica First Look at Openmoko]
 * Juan Lucas Domínguez Rubio: [http://gvsigmobileonopenmoko.wordpress.com/2008/07/02/first-experience-with-openmoko/ First experience with Openmoko]
-* Philipp Kern: [http://www.philkern.de/weblog/en/neo_freerunner.html Neo Freerunner: First impressions]
+* Philipp Kern: [http://www.philkern.de/weblog/en/neo_freerunner.html Neo FreeRunner: First impressions]
 
 === June 2008 ===
 * Andrzej Zaborowski: [http://unadventure.wordpress.com/2008/06/08/accelerating-in-my-pocket/ Accelerating in my pocket]
 
 === May 2008 ===
-* Kevin Dean: [http://www.monochromementality.com/index.php/blog/show/Day-One-Openmoko-Freerunner.html Day One: Openmoko Freerunner]
+* Kevin Dean: [http://www.monochromementality.com/index.php/blog/show/Day-One-Openmoko-FreeRunner.html Day One: Openmoko FreeRunner]
 
 ==== Earlier ====
 * Michael Shiloh: [http://gettingstartedopenmoko.wordpress.com/ Getting Started with Openmoko] (many blog entries in this dedicated blog)
@@ -45,13 +45,13 @@ Newest on top.
 == French (français) ==
 * blog, wiki and forum in french about Openmoko: http://www.openmoko-fr.org
 === July 2008 ===
-* Xavier Cremaschi : [http://wiki.troulite.fr/index.php/NeoFreerunner Freerunner French Companion Wiki] This page is a (quite big) summary of my understanding and experimentations : what are the different software stacks, how you can install them (flashing or dual boot), how you can configure them. Note that everything comes from this wiki or mailing lists, I don't claim paternity for anything except translation and feedback.
+* Xavier Cremaschi : [http://wiki.troulite.fr/index.php/NeoFreeRunner FreeRunner French Companion Wiki] This page is a (quite big) summary of my understanding and experimentations : what are the different software stacks, how you can install them (flashing or dual boot), how you can configure them. Note that everything comes from this wiki or mailing lists, I don't claim paternity for anything except translation and feedback.
 
 == Italian (italiano) ==
 
 === August 2008 ===
 * Lo schiaffo : [http://www.loschiaffo.org/telefono-open-source/ Opensource telephone]
-* TuguLab : [http://blog.tugulab.org/2008/08/13/come-configurare-openmoko-sul-neofreerunner-e-utilizzarlo/ Come configurare Openmoko sul NeoFreerunner e utilizzarlo!] by jollyr0ger
+* TuguLab : [http://blog.tugulab.org/2008/08/13/come-configurare-openmoko-sul-neofreerunner-e-utilizzarlo/ Come configurare Openmoko sul NeoFreeRunner e utilizzarlo!] by jollyr0ger
 
 
 [[Category:Community]]
