--- a/FreeRunner_Overview%2Fee.mw
+++ b/FreeRunner_Overview%2Fee.mw
@@ -1,3 +1,3 @@
-'''Neo Freerunner''' lehekülg on arendamisel!
+'''Neo FreeRunner''' lehekülg on arendamisel!
 
 [[Category:Neo FreeRunner Hardware/ee]]
