Replacing 'Freerunner' with 'FreeRunner'

--- a/FreeRunner_backup_kernel.mw
+++ b/FreeRunner_backup_kernel.mw
@@ -1,10 +1,10 @@
-== Freerunner backup kernel ==
+== FreeRunner backup kernel ==
 
-The Freerunner NAND partition for the monolithic kernel is set to be 8MBytes, but currently kernels are around 2MBytes in size.  This allows us to stash a second, backup kernel in that partition for use in an emergency.  If your USB network connection is unavailable was knocked out for some reason, or the modules in the rootfs are bad and crash on every boot, this can be highly useful to have alongside DFU as a boot menu option eventually.
+The FreeRunner NAND partition for the monolithic kernel is set to be 8MBytes, but currently kernels are around 2MBytes in size.  This allows us to stash a second, backup kernel in that partition for use in an emergency.  If your USB network connection is unavailable was knocked out for some reason, or the modules in the rootfs are bad and crash on every boot, this can be highly useful to have alongside DFU as a boot menu option eventually.
 
 [[Image:Recovery-kernel.png]]
 
-Since this was only implemented after production, factory Freerunners do not currently have a recovery kernel, but it's possible to add as described here.
+Since this was only implemented after production, factory FreeRunners do not currently have a recovery kernel, but it's possible to add as described here.
 
 Once you installed the recovery kernel, it won't get overwritten by subsequent DFU kernel updates because DFU only erases as far as it writes, which is no more than 2MBytes for normal kernel update.
 
