Replacing 'Freerunner' with 'FreeRunner'

--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -74,7 +74,7 @@ Should we expand on that on this page? It would be neat to have something that i
 
 Speedometer functions would include tracking minimums, maximums, averages for speed, distance, and elevation (stopped, moving, combined). Bicyclists (and runners? I am not a runner...) want to know total climb.
 
-''I ride a bicycle and I use GPS as a speedometer and to do field work and I want to be able to do both with my Freerunner.'' [[User:Brian H Wilson|Brian H Wilson]] 19:38, 18 August 2008 (UTC)
+''I ride a bicycle and I use GPS as a speedometer and to do field work and I want to be able to do both with my FreeRunner.'' [[User:Brian H Wilson|Brian H Wilson]] 19:38, 18 August 2008 (UTC)
 
 === Field Collection Tool ===
 
