Replacing 'Freerunner' with 'FreeRunner'

--- a/GPS_Problems.mw
+++ b/GPS_Problems.mw
@@ -1,6 +1,6 @@
 See GPS for details on how to evaluate the [[Neo FreeRunner GPS]] with command line utilities.
 
-=== Problem: it takes a long time (10min+) before the Freerunner gets first GPS data ===
+=== Problem: it takes a long time (10min+) before the FreeRunner gets first GPS data ===
 
 It was found that the Openmoko FreeRunner GPS has a long Time To First Fix (TTFF) with the SD card in the phone. [http://lists.openmoko.org/pipermail/community/2008-July/021774.html This thread] indicates that there is interference from the SD card slot, as without the SD card inserted it the TTFF are much shorter.
 
@@ -13,7 +13,7 @@ It was found that the Openmoko FreeRunner GPS has a long Time To First Fix (TTFF
 
 A [http://lists.openmoko.org/pipermail/openmoko-kernel/2008-July/003777.html software workaround] has been released as a kernel patch and may be acquired simply by doing an "opkg update" and "opkg upgrade" and then rebooting your FreeRunner. This workaround effectively turns off the SD card clock when the SD card is not being used. One will be able to use the SD card at the same time as the GPS except for the first approximately 30 seconds.
 
-Openmoko is soliciting the assistance of the community to test the effectiveness of this software fix. The experiment consists of a series of measurements in different conditions, prior to applying the software fix and then after applying the software fix. Please visit [[Freerunner GPS Software Fix TTFF Measurement Test]] for instructions to participate and to see the results so far of this test.
+Openmoko is soliciting the assistance of the community to test the effectiveness of this software fix. The experiment consists of a series of measurements in different conditions, prior to applying the software fix and then after applying the software fix. Please visit [[FreeRunner GPS Software Fix TTFF Measurement Test]] for instructions to participate and to see the results so far of this test.
 
 Openmoko has examined a hardware solution: soldering a 10 pf capacitor between SD card pin 5 (clk) and pin 6 (Vss) [[Image:Gta02 gps 10pf rework sop.pdf]] and more detailed [[Image:SOP_for_GPS_capacitor_rework.pdf|GPS issue SD clcok pin capacitor rework guide]]. This effectively restores GPS performance to the levels obtained without the SD card inside. The rework is not suggested to end users without hardware soldering technique and equipment. This rework is done on all the new fabricated Neo FreeRunners
 
@@ -65,7 +65,7 @@ The following is based on [http://lists.openmoko.org/pipermail/community/2008-Ju
 ;Did Openmoko test the GPS with a SD card in it?
 :Yes.
 
-;Why didn't they find it while testing the Freerunner?
+;Why didn't they find it while testing the FreeRunner?
 :Because they have to do the tests with a fake GPS signal and with that signal it worked (In a fab you don't have a decent GPS signal). They have already modified the test, so it corresponds to the GPS signal better.
 
 == Information about faulty antennas ==
