--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -2,7 +2,7 @@ This page summarizes the revisions of the GTA02 hardware, both pre-release and p
 
 The internal codename of the [[Neo FreeRunner]] was GTA02. [[Neo_1973_vs_Neo_FreeRunner|Compared]] to the previous [[GTA01]], it has the same physical dimensions, screen and RAM, but more flash storage, a faster processor, plus wifi and accelerometers. The next major revision is expected to be [[GTA03]].
 
-All Neo Freerunners that have been released to the public at this time are [[#GTA02v6|revision 6]]. There are a few persons with r5, but they were manually adapted to the state of r6.
+All Neo FreeRunners that have been released to the public at this time are [[#GTA02v6|revision 6]]. There are a few persons with r5, but they were manually adapted to the state of r6.
 
 == Estimated time line ==
 {{Todo|It should be nice if their are some dates next to the milestones}}
