Replacing 'Freerunner' with 'FreeRunner'

--- a/GTA02_sysfs.mw
+++ b/GTA02_sysfs.mw
@@ -32,7 +32,7 @@ If you cat this you get a list of possible resume sources in text with one or mo
 
 ===MEMCONFIG===
 ====/sys/devices/platform/neo1973-memconfig.0/BANKCON0 .. 7====
-For extreme meddlers (I salute you), these let you control the wait states and other characteristics of the memory regions of the Freerunner.  Information and warnings about how to use these are here:
+For extreme meddlers (I salute you), these let you control the wait states and other characteristics of the memory regions of the FreeRunner.  Information and warnings about how to use these are here:
 
 http://git.openmoko.org/?p=kernel.git;a=commitdiff;h=fd25f90517322fc6c07bfb8d34752d3cb41cb4b6
 
