Replacing 'Freerunner' with 'FreeRunner'

--- a/Gestures.mw
+++ b/Gestures.mw
@@ -1,18 +1,18 @@
 {{Application|Gestures}}
 [[Image:Accelges-Recognize-1.png|thumb]]
 
-=Alpha 2 Release (14 Aug 2008) for Neo Freerunner=
+=Alpha 2 Release (14 Aug 2008) for Neo FreeRunner=
 
 ==Video Demo==
-[http://www.youtube.com/watch?v=K2S2rQUETwc Openmoko Neo Freerunner does Accelerometer-based Gestures, and Screen Orientation]
+[http://www.youtube.com/watch?v=K2S2rQUETwc Openmoko Neo FreeRunner does Accelerometer-based Gestures, and Screen Orientation]
 
 ''Remark: Please watch the video, so that you'd know what to expect out of the Alpha 2 Release.
 
 ==Alpha 2 Release: The Quick Way==
-SSH Neo Freerunner:
+SSH Neo FreeRunner:
  wget http://accelges.googlecode.com/files/accelges_0.1.0-svnr204-r2_armv4t.ipk
  opkg install accelges_0.1.0-svnr204-r2_armv4t.ipk
-On The Neo Freerunner 
+On The Neo FreeRunner 
  /etc/init.d/gesl start
 Over SSH you must use
  DISPLAY=:0 /etc/init.d/gesl start
