Replacing 'Freerunner' with 'FreeRunner'

--- a/Getting_GPS_console_output_with_gllin.mw
+++ b/Getting_GPS_console_output_with_gllin.mw
@@ -1,4 +1,4 @@
-[[gllin]] is the driver used to access GPS data in the Neo 1973. If you have a Freerunner you don't need to look at this page.
+[[gllin]] is the driver used to access GPS data in the Neo 1973. If you have a FreeRunner you don't need to look at this page.
 
 == How to see gllin output ==
 
