Replacing 'Freerunner' with 'FreeRunner'

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -10,7 +10,7 @@ Some Frequently Asked Questions for new owners are featured in the [[FAQ#Getting
 </p>
 
 ! style="background:#fcfcfc; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|Neo FreeRunner Package]]
+[[Image:FreeRunner box.png|200px|thumb|Neo FreeRunner Package]]
 |}
 {{Neo FreeRunner Menu}}
 
@@ -49,7 +49,7 @@ Some Frequently Asked Questions for new owners are featured in the [[FAQ#Getting
 # Unlock the SIM card holder by sliding the metal clip down, towards the USB socket, with your fingernail. Use caution, as these parts are delicate and could be damaged by forcing them in the wrong direction.
 # Lift up on the SIM card holder.
 # The Micro-SD card holder is held in place by a latch on either side.  It is easiest to open the Micro-SD card holder by releasing these latches one at a time rather than by lifting from the middle, as lifting from the middle tends to increase the latching pressure.  A small screwdriver or knife can be used for this.
-# Insert the Micro-SD card into the Micro-SD card holder. Note that on the inside of metal part of the holder there are little holding tabs for the card. Slide the card in these holders (on the metal part) before closing the card holder. Note that the electrical contacts should face down and towards the edge of the Neo Freerunner.
+# Insert the Micro-SD card into the Micro-SD card holder. Note that on the inside of metal part of the holder there are little holding tabs for the card. Slide the card in these holders (on the metal part) before closing the card holder. Note that the electrical contacts should face down and towards the edge of the Neo FreeRunner.
 # Close the Micro-SD card holder, making sure that both latches of the holder are securely fastened.
 # Insert the SIM card into the SIM card holder, taking care to slide inside the two metal tabs in the cover. Note that the electrical contacts should face down and that the cut corner should be closest to the external GPS Antenna Socket.
 # Close the SIM card holder and lock it by sliding the metal clip towards the external GPS Antenna Socket on the FreeRunner.
@@ -64,11 +64,11 @@ Some Frequently Asked Questions for new owners are featured in the [[FAQ#Getting
 
 Before using the Neo FreeRunner for the first time, you should charge the battery completely. The battery can be charged using the provided charger at 1000mA or from a powered USB port capable of providing 500mA worth of current. Most computers will be able to charge the FreeRunner without any problems.
 
-(Note 1: Although the provided charger is rated at 2A, the maximum charge rate of the Neo Freerunner is 1A, and thus the charge rate with the charger is less than the charger capacity.)
+(Note 1: Although the provided charger is rated at 2A, the maximum charge rate of the Neo FreeRunner is 1A, and thus the charge rate with the charger is less than the charger capacity.)
 
 (Note 2: the provided charger includes three "national" plugs. The default is North America, with alternative U.K (3 square pins) and Euro (two round pins) adapters. To install the alternative power adapters, depress the latch in the cover (on the opposite side of the charger from the product information label) and slide the cover outward. Note that the two North American pins do not come out; the other adapters slide over them, and snap into place. The two-pin Euro adapter is removed in the same way as the cover. The three-pin U.K. adapter is removed by '''gently''' pressing the dummy ground pin (black) '''toward the end of the adapter with the cord''' and then sliding it off the adapter.)
 
-(Note 3: the most reliable way to charge the Neo Freerunner is to attach the original provided charger, let the device boot all the way to GUI, and disable suspend in power management)
+(Note 3: the most reliable way to charge the Neo FreeRunner is to attach the original provided charger, let the device boot all the way to GUI, and disable suspend in power management)
 
 Charging an empty battery at 100mA takes 12~15 hours, at 500mA takes 2,5~3,5 hours, and at 1000mA takes 1.5~2.5 hours. (90%~100%) [to be confirmed]
 
@@ -205,7 +205,7 @@ To manually restore one of the state files,
  alsactl -f ''path-to-statefile'' restore
 
 One way to increase the volume of the microphone is to do the following:
-# ssh into your Freerunner
+# ssh into your FreeRunner
 # vi /usr/share/openmoko/scenarios/gsmhandset.state
 # search for "Mic2"
 # change to "value 3"
@@ -219,7 +219,7 @@ To manually control the switch between Speaker and headset:
 Start alsamixer, scroll along to the right until you find "Amp Spk" and mute it (m), the sound will then come out from both channels of the 
 headphones and not out of the speaker.
 
-[[Freerunner_Hardware_Issues]]
+[[FreeRunner_Hardware_Issues]]
 
 === Accessing the microSD card ===
 
@@ -404,7 +404,7 @@ There are plenty of development opportunities to integrate these functions in th
 
 === Welcome to the community ===
 
-The release of the Freerunner in the summer 2008 has led the community into a new period of rapid growth. The resources available are summarized on the [[Openmoko:Community_Portal]]. These are always exciting and interesting times to live in when the balance between Chaos and Order tilts towards change.
+The release of the FreeRunner in the summer 2008 has led the community into a new period of rapid growth. The resources available are summarized on the [[Openmoko:Community_Portal]]. These are always exciting and interesting times to live in when the balance between Chaos and Order tilts towards change.
 
 As an entry point, the [[http://lists.openmoko.org/pipermail/community/ openmoko community mailing list]] is perhaps the most active. As of July 2008, its volume amounts to dozens of messages per day. Openmoko people are there too. You may ask for help on the [[https://lists.openmoko.org/mailman/listinfo/support support mailing list]].
 
