Replacing 'Freerunner' with 'FreeRunner'

--- a/Manuals%2FNeo_FreeRunner%2Fcs.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fcs.mw
@@ -5,7 +5,7 @@
  <div align="left">
 Děkujeme vám za zakoupení vývojářské verze Neo FreeRunnera. Telefon [[Neo FreeRunner]] je druhou verzí Hardwarové platformy vyvinuté pro využití výhod systému Openmoko. Tato příručka se vám pokusí usnadnit první kroky s vaším Neo FreeRunnerem.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|Balení Neo FreeRunnera]]
+[[Image:FreeRunner box.png|200px|thumb|Balení Neo FreeRunnera]]
 |}
 
 == Balíček obsahuje: ==
@@ -61,7 +61,7 @@ Děkujeme vám za zakoupení vývojářské verze Neo FreeRunnera. Telefon [[Neo
 # Unlock the SIM card holder by sliding the metal clip down, towards the USB socket, with your fingernail. Use caution, as these parts are delicate and could be damaged by forcing them in the wrong direction.
 # Lift up on the SIM card holder.
 # The Micro-SD card holder is held in place by a latch on either side.  It is easiest to open the Micro-SD card holder by releasing these latches one at a time rather than by lifting from the middle, as lifting from the middle tends to increase the latching pressure.  A small screwdriver or knife can be used for this.
-# Insert the Micro-SD card into the Micro-SD card holder. Note that on the inside of metal part of the holder there are little holding tabs for the card. Slide the card in these holders (on the metal part) before closing the card holder. Note that the electrical contacts should face down and towards the edge of the Neo Freerunner.
+# Insert the Micro-SD card into the Micro-SD card holder. Note that on the inside of metal part of the holder there are little holding tabs for the card. Slide the card in these holders (on the metal part) before closing the card holder. Note that the electrical contacts should face down and towards the edge of the Neo FreeRunner.
 # Close the Micro-SD card holder, making sure that both latches of the holder are securely fastened.
 # Insert the SIM card into the SIM card holder, taking care to slide inside the two metal tabs in the cover. Note that the electrical contacts should face down and that the cut corner should be closest to the external GPS Antenna Socket.
 # Close the SIM card holder and lock it by sliding the metal clip towards the external GPS Antenna Socket on the FreeRunner.
@@ -70,7 +70,7 @@ Děkujeme vám za zakoupení vývojářské verze Neo FreeRunnera. Telefon [[Neo
 
 [[Image:FR_SIM_SD_open.jpg|457px|thumb|SIM and SD holders open, with cards in place|center]]
 
-===Nabíjení Neo Freerunnera:===
+===Nabíjení Neo FreeRunnera:===
 
 Poprvé by jste baterii měli nabít úplně. Akumulátor můžete nabíjet jednak přiloženým síťovým nabíječem proudem 1A nebo přes USB proudem 0,5A (1-2h) nebo případně 0,1A(6-12h). V drtivé většině případů jsou schopny USB porty dodat proud 0,5A.
 
@@ -158,7 +158,7 @@ If you can export your contacts to VCard format, either multiple files or single
 
 You may ask for help on the support mailing list : more details at https://lists.openmoko.org/mailman/listinfo/support
 
-[[Freerunner_Hardware_Issues]]
+[[FreeRunner_Hardware_Issues]]
 
 == Nastavení sesíťování přes USB - Aktualizace ==
 
@@ -384,7 +384,7 @@ Then on the FreeRunner:
 
 There are tons more apps you can install - check out the [[Repositories]] for a list of packages.
 
-==Booting the Neo Freerunner==
+==Booting the Neo FreeRunner==
 
 You can boot your Neo FreeRunner in the following ways:
 
@@ -456,17 +456,17 @@ Press and hold the AUX button, then press and hold the Power button. Then, relea
 ==Flashing the Neo FreeRunner==
 As Openmoko development continues, Openmoko regularly releases updated versions of the Openmoko root filesystem, the kernel, and the[[Bootloader| U-Boot]]. These may be programmed into the Flash memory of Neo FreeRunner. You can use the USB cable and Openmoko provided tool to flash Neo FreeRunner.
 
-{{note|The Openmoko software team builds images daily. If you want to use the latest images, you can download the image from the daily build, but we recommend you download the most stable image from http://downloads.openmoko.org/releases/Freerunner/. Images here have been tested by the test team.
+{{note|The Openmoko software team builds images daily. If you want to use the latest images, you can download the image from the daily build, but we recommend you download the most stable image from http://downloads.openmoko.org/releases/FreeRunner/. Images here have been tested by the test team.
 
 More about current Images: http://wiki.openmoko.org/wiki/Latest_Images}}
 
 ===Step 1. Download the DFU-util===
 
 You can download the flashing tool from: 
-http://downloads.openmoko.org/releases/Freerunner/dfu-util
+http://downloads.openmoko.org/releases/FreeRunner/dfu-util
 
 On the GNU/Linux host you can use the following command to download the dfu-util:
- wget http://downloads.openmoko.org/releases/Freerunner/dfu-util
+ wget http://downloads.openmoko.org/releases/FreeRunner/dfu-util
 
 Afterwards you have to change the rights on the file:
  chmod a+x dfu-util
@@ -481,7 +481,7 @@ Afterwards you have to change the rights on the file:
 Before you execute the following command, please log into U-Boot in the NOR Flash. The Neo FreeRunner needs to be at the NOR boot menu for flashing.  You will then need to connect your Neo with the GNU/Linux host via USB cable.
 
 You can download the kernel from 
-http://downloads.openmoko.org/releases/Freerunner/
+http://downloads.openmoko.org/releases/FreeRunner/
 
 Type in the following command in the terminal on a GNU/Linux host. On some systems you need to be root before this will work and on Ubuntu you must preface the command with "sudo" or you will get the following error: "Cannot claim interface: could not claim interface 2: Operation not permitted"
 
@@ -507,7 +507,7 @@ When flashing succeeds the following will be shown:
 
 ===Step 3. Flashing the Root Filesystem ===
 You can download the root filesystem from:
-http://downloads.openmoko.org/releases/Freerunner/
+http://downloads.openmoko.org/releases/FreeRunner/
 
 Type the following command in the terminal of a GNU/Linux host. On some systems you will need to be root.
 
