Replacing 'Freerunner' with 'FreeRunner'

--- a/Manuals%2FNeo_FreeRunner%2Fde.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fde.mw
@@ -5,7 +5,7 @@
  <div align="left">
 Danke, dass ihr die Entwicklerversion des Neo FreeRunner erworben habt. Der [[Neo FreeRunner]] ist die zweite Generation einer Hardwareplattform, welche die Vorteile von Openmoko ausnutzt. Diese Anleitung soll euch helfen, euren Neo FreeRunner kennen zu lernen und erklärt die ersten Schritte mit eurem Neo FreeRunner.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|Neo FreeRunner Paket]]
+[[Image:FreeRunner box.png|200px|thumb|Neo FreeRunner Paket]]
 |}
 
 == Was ist in der Box==
@@ -124,7 +124,7 @@ Den AUX-Knopf gedrückt halten, dann den Power-Knopf gedrückt halten. Man sieht
 ==Flashen des Neo FreeRunner==
 As Openmoko development continues, Openmoko regularly releases updated versions of the Openmoko root filesystem, the kernel, and the[[Bootloader/de| U-Boot]]. These may be programmed into the Flash memory of Neo FreeRunner. You can use the USB cable and Openmoko provided tool to flash Neo FreeRunner.
 
-{{note|Das Openmoko Software Team erstellt täglich Images. Wenn du das neueste Image willst, kannst du das vom daily build Server runterladen, aber wir empfehlen ein stabiles Image von http://downloads.openmoko.org/releases/Freerunner/ zu nehmen. Die Images dort sind vom Testteam getestet.}}
+{{note|Das Openmoko Software Team erstellt täglich Images. Wenn du das neueste Image willst, kannst du das vom daily build Server runterladen, aber wir empfehlen ein stabiles Image von http://downloads.openmoko.org/releases/FreeRunner/ zu nehmen. Die Images dort sind vom Testteam getestet.}}
 
 ===Schritt 1: Download DFU-util===
 
@@ -246,7 +246,7 @@ Statefiles sind (in /usr/share/openmoko/scenarios/):
 These correspond to the various Sound Profiles accessible in the Debug Tool under Applications.
 
 One way to increase the volume of the microphone is to do the following:
-# ssh into your Freerunner
+# ssh into your FreeRunner
 # vi /usr/share/openmoko/scenarios/gsmhandset.state
 # search for "Mic2"
 # change to "value 3"
@@ -262,7 +262,7 @@ aus, oder man ändert das Wav-Datei in etwas angenehmeres.
 Wer sich ein richtiges Keyboard installieren möchte, kann dieser [http://www.ginguppin.de/node/15 Anleitung] folgen.
 
 
-[[Freerunner_Hardware_Issues]]
+[[FreeRunner_Hardware_Issues]]
 
 ==Anhang==
 Wer mehr über den FreeRunner wissen möchte, findet hier weitere Infos:
